refactor tests to create most test objects programmatically